# morphological-parser-for-ShlokaProcessor

./: .gitignore  README.md  literature.md  pyproject.toml  temp_train_data_task2.pickle
.history/: .gitignore_20250404012507  .gitignore_20250405030845  .gitignore_20250405030916  pyproject_20250324002016.toml  pyproject_20250403222553.toml  pyproject_20250403222933.toml  pyproject_20250403234221.toml
.history/Task1/: config_20250404152851.py  config_20250404152916.py
.history/Task2/RuleClassification/: config_20250314172041.cfg  config_20250404152946.cfg  config_20250404153014.py  config_20250404165928.cfg  config_20250404165952.py  config_20250404170954.cfg  config_20250404171150.cfg  config_20250404171515.cfg  config_20250404173416.cfg  config_20250405024849.cfg  generate_dataset_20250403235058.py  helpers_20250405020532.py  main_20250404164844.py  main_20250404164909.py  main_20250404164916.py  main_20250404165238.py  main_20250404170258.py  main_20250404173200.py  main_20250404195213.py  main_20250405013338.py  main_20250405021336.py  main_20250405021350.py  main_20250405022508.py  main_20250405024107.py
.history/Task2/RuleTune/: main_ray_20250314172041.py  main_ray_20250403224533.py  main_ray_20250403224612.py  main_ray_20250403232317.py  main_ray_20250403233345.py  main_ray_20250403234804.py  main_ray_20250403235146.py  main_ray_20250404001813.py  main_ray_20250404153722.py  main_ray_20250404162737.py  (+2 more)
Task2/Seq2Seq_Decoding/: config.cfg  main.py  model.py  scoring.py
sanskrit/: task_2_input_sentences.tsv  wsmp_dev.json  wsmp_train.json
(+5 files in other folders)
