[tool.poetry]
name = "tuesan"
version = "0.1.0"
description = "Word Segmentation and Morphological Parsing Sanskrit"
authors = ["Leander Girrbach, Jingwen Li"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^1.10.0"
networkx = "^2.6.3"
edit-distance = "^1.0.4"
editdistance = "^0.6.0"
tqdm = "^4.62.3"
rich = "^10.12.0"
numpy = "^1.21.3"
scikit-learn = "^1.0"
ray = {extras = ["tune"], version = "^2.44.1"}
pandas = "^2.2.3"
tabulate = "^0.9.0"
ipywidgets = "^8.1.5"
jupyterlab-widgets = "^3.0.13"
notebook = "^7.3.3"
git-lfs = "^1.6"
wandb = "^0.19.9"

[tool.poetry.group.dev.dependencies]
black = "^21.10b0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
